# Spatial-ScRNA-seq-PBPK-QSP-Model

./: .gitattributes  Claude Fleet Telemetry.dc.html  Claude Machine Topology.dc.html  Costim - Start Here.dc.html  Costim Binder Design Notebook.dc.html  Costim Binder Diffusion.dc.html  Costim Binder Structure.dc.html  Costim Built with Claude.dc.html  Costim Counter-Screen Deck.dc.html  Costim Counter-Screen Figures.dc.html  Costim Counter-Screen Writeup.dc.html  Costim GRN Networks.dc.html  Costim Landscape.dc.html  Costim PBPK Runner.dc.html  Costim QSP Model Documentation.dc.html  Costim QSP Reproduction Notebook.dc.html  Costim Reproduction Notebook.dc.html  GRN Networks.dc.html  PUSH_GUIDE.md  PipelineBar.dc.html  QSP Model Explorer.dc.html  README.md  figdata.js  grn_data.js  index.html  pbpk_runner_data.js  spatial_atlas.js  spatial_data.js  struct_data.js  sweep_manifest.js
01_report/: COSTIM_COUNTERSCREEN_RESEARCH_REPORT.md  PKPD_VALIDATION_REPORT.md  PRE_QSP_MASTER_SUMMARY.md  QSP_REPORT_SECTION.md  REPORT_01_framing_nomination.md  REPORT_02_toxicity_counterscreen.md  REPORT_04_grn.md  REPORT_05_discovery.md  REPORT_06_taa.md
02_analysis_results/costim_arm_sweep_solid/: COSTIM_SWEEP_ANALYSIS.csv  COSTIM_SWEEP_SOLID_RESULTS.md  EGFR_SWEEP_ANALYSIS.csv  README.md
02_analysis_results/effector_expression/: A30_nomination_recheck.csv  A34_expression_selectivity_CD8vsCD4.csv
02_analysis_results/model_output_validation/: MODEL_OUTPUT_ANALYSIS.md  MODEL_OUTPUT_ANALYSIS_2026-07-14.csv  (+2 more)
03_reproduction/: binder_design_reproduction.ipynb  costim_counterscreen_reproduction_executed.ipynb  requirements.txt
07_datasets_reference/: DATASETS.md  canon_map.json
08_model_pointer/: README_MODEL_LOCATION.md
09_model_and_qsp/: README.md
10_full_binder_campaign/: README_MANIFEST.md
10_full_binder_campaign/rfantibody_campaign/pipeline_scripts/: CLAUDE.md  README-MG.txt  chain_cd3.sh  chain_cea5.sh  chain_mpnn.sh  my_new_seqs.csv  pdb_to_chothia.py  pyproject.toml  rfantibody.def  run_campaign.sh  run_cd3_campaign.sh  run_cea5_campaign.sh  run_mpnn_cpu_one.sh  run_proteinmpnn.sh
11_animation_source/: README.md
grn/: drive_cd4.csv  drive_cd8.csv  edges_cd4.csv  edges_cd8.csv
(+914 files in other folders)
