[project]
name = "rfantibody"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = "==3.10.*"
authors = [
    { name = "Nate Bennett", email = "nrbennett2@gmail.com" },
    { name = "Joe Watchwell", email = "joe.watchwell@gmail.com" }
]
dependencies = [
    "torch==2.3.*",
    "torchaudio",
    "torchvision",
    "torch-utils",
    "numpy>=1.0,<2.0",
    "cuda-python==11.8",
    "hydra-core",
    "icecream",
    "opt-einsum",
    "biotite>=0.38.0",
    "dgl",
    "e3nn",
    "pyrsistent",
    "click>=8.0.0",
    "pandas",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "isort>=5.13.2",
]

[project.scripts]
# Quiver utilities
qvls = "rfantibody.cli.quiver:qvls"
qvextract = "rfantibody.cli.quiver:qvextract"
qvextractspecific = "rfantibody.cli.quiver:qvextractspecific"
qvscorefile = "rfantibody.cli.quiver:qvscorefile"
qvsplit = "rfantibody.cli.quiver:qvsplit"
qvslice = "rfantibody.cli.quiver:qvslice"
qvrename = "rfantibody.cli.quiver:qvrename"
qvfrompdbs = "rfantibody.cli.quiver:qvfrompdbs"
# Inference commands
rfdiffusion = "rfantibody.cli.inference:rfdiffusion"
proteinmpnn = "rfantibody.cli.inference:proteinmpnn"
rf2 = "rfantibody.cli.inference:rf2"

[tool.uv.sources]
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }
torchvision = { index = "pytorch" }
dgl = { url = "https://data.dgl.ai/wheels/torch-2.3/cu118/dgl-2.4.0%2Bcu118-cp310-cp310-manylinux1_x86_64.whl" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/rfantibody",
    "include/SE3Transformer/se3_transformer",
    "test",
]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
split_on_trailing_comma = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party = ["rfantibody"]
